--- a/CodeGenUtility/src/main/resources/static/css/custom.css
+++ b/CodeGenUtility/src/main/resources/static/css/custom.css
@@ -1180,6 +1180,14 @@ ADDED FOR TOOL TIP
   display: none;
 }
 .loading { border:1px solid #ddd; padding:20px; margin:40px 5px; width:80px;}
+.loadingBackgronud{
+  position: fixed; 
+  top: 0; 
+  right: 0; 
+  bottom: 0; 
+  left: 0; 
+  background-color: rgb(0,0,0);opacity: 0.5;  z-index:9998;
+} 
 
 #loading-indicator {
   position: absolute;
@@ -1191,3 +1199,6 @@ ADDED FOR TOOL TIP
     .form-horizontal .control-label{
         padding-top: 7px;
     }
+   .marginbt{
+   margin:10px;
+   } 
