--- a/CodeGenUtility/src/main/resources/static/css/custom.css
+++ b/CodeGenUtility/src/main/resources/static/css/custom.css
@@ -82,10 +82,6 @@ li{list-style: none;}
 	src: url(../fonts/GEInspIt.woff);
 }
 
-body{
-  font-family: ge-bold;
-}
-
 div.well{
   height: 250px;
 } 
@@ -337,621 +333,6 @@ textarea {
   text-align: center;
 }
 
-/*style*/
-/* 
-.btn:hover,
-.btn:active,
-.btn.active,
-.btn.disabled,
-.btn[disabled] {
-  background-color: #e1e2e5;
-}
-.btn:first-child {
-  *margin-left: 0;
-}
-.btn:hover,
-.btn:focus {
-  color: #5c5f63;
-  text-decoration: none;
-  background-position: 0 -15px;
-  -webkit-transition: background-position 0.1s linear;
-  -moz-transition: background-position 0.1s linear;
-  -o-transition: background-position 0.1s linear;
-  transition: background-position 0.1s linear;
-}
-.btn:focus {
-  outline: thin dotted #333;
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
-}
-.btn.active,
-.btn:active {
-  background-image: none;
-  outline: 0;
-}
-.btn.disabled,
-.btn[disabled] {
-  cursor: default;
-  background-image: none;
-  opacity: 0.65;
-  filter: alpha(opacity=65);
-}
-.btn-large {
-  padding: 11px 19px;
-  font-size: 14px;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
-}
-.btn-large [class^="icon-"],
-.btn-large [class*=" icon-"] {
-  margin-top: 4px;
-}
-.btn-small {
-  padding: 2px 10px;
-  font-size: 10.5px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-}
-.btn-small [class^="icon-"],
-.btn-small [class*=" icon-"] {
-  margin-top: 0;
-}
-.btn-mini [class^="icon-"],
-.btn-mini [class*=" icon-"] {
-  margin-top: -1px;
-}
-.btn-mini {
-  padding: 0 6px;
-  font-size: 9.799999999999999px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-}
-.btn-block {
-  display: block;
-  width: 100%;
-  padding-left: 0;
-  padding-right: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-.btn-block + .btn-block {
-  margin-top: 5px;
-}
-input[type="submit"].btn-block,
-input[type="reset"].btn-block,
-input[type="button"].btn-block {
-  width: 100%;
-}
-.btn-primary.active,
-.btn-warning.active,
-.btn-danger.active,
-.btn-success.active,
-.btn-info.active,
-.btn-inverse.active {
-  color: rgba(255, 255, 255, 0.75);
-}
-.btn-primary {
-  color: #ffffff;
-  background-color: #313337;
-}
-.btn-primary:hover,
-.btn-primary:active,
-.btn-primary.active,
-.btn-primary.disabled,
-.btn-primary[disabled] {
-  background-color: #191a1c;
-}
-.btn-warning {
-  color: #ffffff;
-  background-color: #ed8000;
-}
-.btn-warning:hover,
-.btn-warning:active,
-.btn-warning.active,
-.btn-warning.disabled,
-.btn-warning[disabled] {
-  background-color: #ba6400;
-}
-.btn-danger {
-  color: #ffffff;
-  background-color: #ee3324;
-}
-.btn-danger:hover,
-.btn-danger:active,
-.btn-danger.active,
-.btn-danger.disabled,
-.btn-danger[disabled] {
-  background-color: #cf1e10;
-}
-.btn-success {
-  color: #ffffff;
-  background-color: #76b900;
-}
-.btn-success:hover,
-.btn-success:active,
-.btn-success.active,
-.btn-success.disabled,
-.btn-success[disabled] {
-  background-color: #558600;
-}
-.btn-info {
-  color: #ffffff;
-  background-color: #08a5e1;
-}
-.btn-info:hover,
-.btn-info:active,
-.btn-info.active,
-.btn-info.disabled,
-.btn-info[disabled] {
-  background-color: #0681b0;
-}
-.btn-inverse {
-  color: #ffffff;
-  background-color: #3f4145;
-}
-.btn-inverse:hover,
-.btn-inverse:active,
-.btn-inverse.active,
-.btn-inverse.disabled,
-.btn-inverse[disabled] {
-  background-color: #313337;
-}
-button.btn,
-input[type="submit"].btn {
-  *padding-top: 3px;
-  *padding-bottom: 3px;
-}
-button.btn::-moz-focus-inner,
-input[type="submit"].btn::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-button.btn.btn-large,
-input[type="submit"].btn.btn-large {
-  *padding-top: 7px;
-  *padding-bottom: 7px;
-}
-button.btn.btn-small,
-input[type="submit"].btn.btn-small {
-  *padding-top: 3px;
-  *padding-bottom: 3px;
-}
-button.btn.btn-mini,
-input[type="submit"].btn.btn-mini {
-  *padding-top: 1px;
-  *padding-bottom: 1px;
-}
-.btn-link,
-.btn-link:active,
-.btn-link[disabled] {
-  background-color: transparent;
-  background-image: none;
-}
-.btn-link {
-  border-color: transparent;
-  cursor: pointer;
-  color: #3b73b9;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-}
-.btn-link:hover,
-.btn-link:focus {
-  color: #22436b;
-  text-decoration: underline;
-  background-color: transparent;
-}
-.btn-link[disabled]:hover,
-.btn-link[disabled]:focus {
-  color: #5c5f63;
-  text-decoration: none;
-}
-.btn {
-  border-color: #e1e2e5;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
-  font-weight: normal;
-  line-height: 20px;
-  padding: 2px 10px;
-  text-decoration: none;
-  -webkit-transition: background-color .1s linear, border-color .1s linear, color .1s linear;
-  -moz-transition: background-color .1s linear, border-color .1s linear, color .1s linear;
-  -o-transition: background-color .1s linear, border-color .1s linear, color .1s linear;
-  transition: background-color .1s linear, border-color .1s linear, color .1s linear;
-}
-.btn:hover {
-  -webkit-transition: background-color .1s linear, border-color .1s linear, color .1s linear;
-  -moz-transition: background-color .1s linear, border-color .1s linear, color .1s linear;
-  -o-transition: background-color .1s linear, border-color .1s linear, color .1s linear;
-  transition: background-color .1s linear, border-color .1s linear, color .1s linear;
-}
-.btn:focus {
-  outline: none;
-}
-.btn .selected {
-  background-color: #3b73b9;
-  border-color: #3b73b9;
-  color: #ffffff;
-}
-.btn [class*="icon-"] {
-  font-size: 16px;
-  vertical-align: middle;
-}
-.btn [class*="icon-"]:first-child:not(:last-child) {
-  margin-right: 5px;
-}
-.btn [class*="icon-"]:last-child:not(:first-child) {
-  margin-left: 5px;
-}
-.btn [class*="icon-"]:first-child + [class*="icon-"]:last-child {
-  margin-left: 0;
-}
-.btn [class*="icon-chevron-"],
-.btn [class*="icon-remove"] {
-  font-size: 12px;
-  vertical-align: baseline;
-}
-.btn [class*="icon-search"] {
-  vertical-align: -5%;
-}
-.btn-large {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  font-size: 14px;
-  padding: 6px 12px;
-}
-.btn-large [class*="icon-"]:not([class*="icon-chevron-"]):not([class*="icon-remove"]) {
-  font-size: 20px;
-}
-.btn-large.btn-icon {
-  padding: 3px 10px 6px;
-}
-.btn-small {
-  font-size: 10.5px;
-  line-height: 18px;
-  padding: 2px 8px;
-}
-.btn-small [class*="icon-"]:not([class*="icon-chevron-"]):not([class*="icon-remove"]) {
-  font-size: 14.5px;
-}
-.btn-mini {
-  font-size: 9.799999999999999px;
-  line-height: 18px;
-  padding: 0 5px;
-}
-.btn-mini [class*="icon-"]:not([class*="icon-chevron-"]):not([class*="icon-remove"]) {
-  font-size: 11.799999999999999px;
-}
-.btn-mini.btn-icon {
-  margin-top: 0;
-}
-.btn-fade > * {
-  opacity: 0.3;
-  filter: alpha(opacity=30);
-  -webkit-transition: opacity 0.1s linear;
-  -moz-transition: opacity 0.1s linear;
-  -o-transition: opacity 0.1s linear;
-  transition: opacity 0.1s linear;
-}
-.btn-fade:hover > * {
-  opacity: 1;
-  filter: alpha(opacity=100);
-}
-.btn-inverse {
-  color: #999c9f;
-}
-.btn-primary,
-.btn-warning,
-.btn-danger,
-.btn-success,
-.btn-info,
-.btn-inverse {
-  border-color: transparent;
-}
-.btn-primary:hover,
-.btn-warning:hover,
-.btn-danger:hover,
-.btn-success:hover,
-.btn-info:hover,
-.btn-inverse:hover,
-.btn-primary:focus,
-.btn-warning:focus,
-.btn-danger:focus,
-.btn-success:focus,
-.btn-info:focus,
-.btn-inverse:focus {
-  color: #ffffff;
-}
-.btn-link {
-  background-color: transparent;
-  border-color: transparent;
-  padding: 0;
-}
-.btn-link [class*="icon-"] {
-  font-size: inherit;
-  vertical-align: baseline;
-}
-.btn-link:hover {
-  color: #22436b;
-}
-.btn-link[disabled]:hover {
-  color: #5c5f63;
-}
-.btn-group {
-  position: relative;
-  display: inline-block;
-  *display: inline;
-  IE7 inline-block hack
-  *zoom: 1;
-  font-size: 0;
-  vertical-align: middle;
-  white-space: nowrap;
-  *margin-left: .3em;
-}
-.btn-group:first-child {
-  *margin-left: 0;
-}
-.btn-group + .btn-group {
-  margin-left: 5px;
-}
-.btn-toolbar {
-  font-size: 0;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-.btn-toolbar > .btn + .btn,
-.btn-toolbar > .btn-group + .btn,
-.btn-toolbar > .btn + .btn-group {
-  margin-left: 5px;
-}
-.btn-group > .btn {
-  position: relative;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-}
-.btn-group > .btn + .btn {
-  margin-left: -1px;
-}
-.btn-group > .btn,
-.btn-group > .dropdown-menu,
-.btn-group > .popover {
-  font-size: 14px;
-}
-.btn-group > .btn-mini {
-  font-size: 9.799999999999999px;
-}
-.btn-group > .btn-small {
-  font-size: 10.5px;
-}
-.btn-group > .btn-large {
-  font-size: 14px;
-}
-.btn-group > .btn:first-child {
-  margin-left: 0;
-  -webkit-border-top-left-radius: 4px;
-  -moz-border-radius-topleft: 4px;
-  border-top-left-radius: 4px;
-  -webkit-border-bottom-left-radius: 4px;
-  -moz-border-radius-bottomleft: 4px;
-  border-bottom-left-radius: 4px;
-}
-.btn-group > .btn:last-child,
-.btn-group > .dropdown-toggle {
-  -webkit-border-top-right-radius: 4px;
-  -moz-border-radius-topright: 4px;
-  border-top-right-radius: 4px;
-  -webkit-border-bottom-right-radius: 4px;
-  -moz-border-radius-bottomright: 4px;
-  border-bottom-right-radius: 4px;
-}
-.btn-group > .btn.large:first-child {
-  margin-left: 0;
-  -webkit-border-top-left-radius: 6px;
-  -moz-border-radius-topleft: 6px;
-  border-top-left-radius: 6px;
-  -webkit-border-bottom-left-radius: 6px;
-  -moz-border-radius-bottomleft: 6px;
-  border-bottom-left-radius: 6px;
-}
-.btn-group > .btn.large:last-child,
-.btn-group > .large.dropdown-toggle {
-  -webkit-border-top-right-radius: 6px;
-  -moz-border-radius-topright: 6px;
-  border-top-right-radius: 6px;
-  -webkit-border-bottom-right-radius: 6px;
-  -moz-border-radius-bottomright: 6px;
-  border-bottom-right-radius: 6px;
-}
-.btn-group > .btn:hover,
-.btn-group > .btn:focus,
-.btn-group > .btn:active,
-.btn-group > .btn.active {
-  z-index: 2;
-}
-.btn-group .dropdown-toggle:active,
-.btn-group.open .dropdown-toggle {
-  outline: 0;
-}
-.btn-group > .btn + .dropdown-toggle {
-  padding-left: 8px;
-  padding-right: 8px;
-  *padding-top: 5px;
-  *padding-bottom: 5px;
-}
-.btn-group > .btn-mini + .dropdown-toggle {
-  padding-left: 5px;
-  padding-right: 5px;
-  *padding-top: 2px;
-  *padding-bottom: 2px;
-}
-.btn-group > .btn-small + .dropdown-toggle {
-  *padding-top: 5px;
-  *padding-bottom: 4px;
-}
-.btn-group > .btn-large + .dropdown-toggle {
-  padding-left: 12px;
-  padding-right: 12px;
-  *padding-top: 7px;
-  *padding-bottom: 7px;
-}
-.btn-group.open .dropdown-toggle {
-  background-image: none;
-}
-.btn-group.open .btn.dropdown-toggle {
-  background-color: #e1e2e5;
-}
-.btn-group.open .btn-primary.dropdown-toggle {
-  background-color: #191a1c;
-}
-.btn-group.open .btn-warning.dropdown-toggle {
-  background-color: #ba6400;
-}
-.btn-group.open .btn-danger.dropdown-toggle {
-  background-color: #cf1e10;
-}
-.btn-group.open .btn-success.dropdown-toggle {
-  background-color: #558600;
-}
-.btn-group.open .btn-info.dropdown-toggle {
-  background-color: #0681b0;
-}
-.btn-group.open .btn-inverse.dropdown-toggle {
-  background-color: #313337;
-}
-.btn .caret {
-  margin-top: 8px;
-  margin-left: 0;
-}
-.btn-large .caret {
-  margin-top: 6px;
-}
-.btn-large .caret {
-  border-left-width: 5px;
-  border-right-width: 5px;
-  border-top-width: 5px;
-}
-.btn-mini .caret,
-.btn-small .caret {
-  margin-top: 8px;
-}
-.dropup .btn-large .caret {
-  border-bottom-width: 5px;
-}
-.btn-primary .caret,
-.btn-warning .caret,
-.btn-danger .caret,
-.btn-info .caret,
-.btn-success .caret,
-.btn-inverse .caret {
-  border-top-color: #ffffff;
-  border-bottom-color: #ffffff;
-}
-.btn-group-vertical {
-  display: inline-block;
-  *display: inline;
-  IE7 inline-block hack
-  *zoom: 1;
-}
-.btn-group-vertical > .btn {
-  display: block;
-  float: none;
-  max-width: 100%;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-}
-.btn-group-vertical > .btn + .btn {
-  margin-left: 0;
-  margin-top: -1px;
-}
-.btn-group-vertical > .btn:first-child {
-  -webkit-border-radius: 4px 4px 0 0;
-  -moz-border-radius: 4px 4px 0 0;
-  border-radius: 4px 4px 0 0;
-}
-.btn-group-vertical > .btn:last-child {
-  -webkit-border-radius: 0 0 4px 4px;
-  -moz-border-radius: 0 0 4px 4px;
-  border-radius: 0 0 4px 4px;
-}
-.btn-group-vertical > .btn-large:first-child {
-  -webkit-border-radius: 6px 6px 0 0;
-  -moz-border-radius: 6px 6px 0 0;
-  border-radius: 6px 6px 0 0;
-}
-.btn-group-vertical > .btn-large:last-child {
-  -webkit-border-radius: 0 0 6px 6px;
-  -moz-border-radius: 0 0 6px 6px;
-  border-radius: 0 0 6px 6px;
-}
-.btn-group > .btn,
-.btn-group > .dropdown-menu,
-.btn-group > .popover {
-  font-size: 12px;
-}
-.btn-group > .btn-mini {
-  font-size: 9.799999999999999px;
-}
-.btn-group > .btn-small {
-  font-size: 10.5px;
-}
-.btn-group > .btn-large {
-  font-size: 14px;
-}
-.btn-group > .btn-icon {
-  font-size: 16px;
-}
-.btn-group > .btn-icon.btn-large {
-  font-size: 20px;
-}
-.btn-group > .btn-icon.btn-small {
-  font-size: 12.5px;
-}
-.btn-group > .btn-icon.btn-mini {
-  font-size: 11.799999999999999px;
-}
-.btn-group > .btn + .btn-primary,
-.btn-group > .btn + .btn-success,
-.btn-group > .btn + .btn-warning,
-.btn-group > .btn + .btn-info,
-.btn-group > .btn + .btn-danger {
-  margin-left: 1px;
-}
-.btn-toolbar {
-  margin: 15px 15px 0px;
-}
-.btn-toolbar > .btn-group {
-  margin-bottom: 10px;
-}
-.btn-group > .btn + .tooltip + .btn {
-  margin-left: -1px;
-}
-.btn-group.open .btn-inverse.dropdown-toggle {
-  color: #ffffff;
-}
-.btn-small .caret,
-.btn-large .caret {
-  margin-top: 8px;
-}
-.btn-mini .caret {
-  margin-top: 7px;
-}
-.btn-filter .icon-star {
-  margin-right: 5px;
-  margin-left: -2px;
-}
-.btn-group > .tooltip + .btn {
-  padding-left: 8px;
-  padding-right: 8px;
-}
- */
-
 .checkbox label:after, 
 .radio label:after {
     content: '';
@@ -1101,8 +482,9 @@ ADDED FOR TOOL TIP
 }
 .modal-dialog {
     position: relative; 
-    top: 76px;
+    top: 7%;
     left: 20px;
+    width: 60%;
 }
   .warning {
     background: #eee;
@@ -1112,16 +494,6 @@ ADDED FOR TOOL TIP
     background: #fff;
 }
 
-/*.archleft{
-  margin-left: -28px;
-}
-.marleft{
-  margin-left: -15px;
-}
-.whr{
-      margin-left: -10px;
-    width: 88%;
-}*/
 .radio label{
   display: inline-block;
 }
@@ -1145,10 +517,3 @@ ADDED FOR TOOL TIP
   top: 50%;
   z-index: 100;
 }
-	/* Fix alignment issue of label on extra small devices in Bootstrap 3.2 */
-    .form-horizontal .control-label{
-        padding-top: 7px;
-    }
-   .marginbt{
-   margin:10px !important;
-   } 
